tests/unit_tests/sema/function_redecl_array_default_arg_01.cc
// RUN: %cxx -verify %s

void g(int a[4] = nullptr);

// expected-error@1 {{redefinition of default argument}}
void g(int a[] = nullptr);
